[package]
name = "enhanced-vision"
version = "0.1.0"
authors = ["pjotr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = {version = "0.28", default-features = false, features = ["opencv-34", "contrib"]}
gpio-cdev = "0.2"
